# cruise_ship_architect

./: Cargo.toml  README.md
assets/: actor.aseprite  debug.aseprite  floor.aseprite  wall.aseprite
assets/scenes/: load_scene_example.scn.ron  scene.scn.ron
src/: actor.rs  animation.rs  camera.rs  constants.rs  cursor.rs  fps_debug.rs  game.rs  game_state.rs  grid.rs  main.rs  mover.rs  prelude.rs  scene.rs  splash.rs  tile.rs  utils.rs
src/ai/: mod.rs
src/ai/movers/: plugins.rs  systems.rs
src/ai/systems/: spawn_actor.rs
src/game_ui/: components.rs  mod.rs  plugins.rs  resources.rs  systems.rs
src/main_menu/: components.rs  mod.rs  plugins.rs  resources.rs  states.rs  styles.rs  systems.rs
src/main_menu/systems/: display_settings_setup.rs  handle_button_interaction.rs  handle_selected_button.rs  main_setup.rs  menu_action.rs  settings_setup.rs  setup.rs  sound_settings_setup.rs
src/movers/: components.rs  mod.rs  plugins.rs
src/movers/components/: mover.rs  mover_path.rs  mover_state.rs  mover_target.rs
src/movers/systems/: generate_path_for_movers.rs  move_movers_with_target.rs  set_target_for_movers.rs
src/tiles/: bundles.rs  components.rs  mod.rs  plugins.rs  systems.rs
src/tiles/components/: floor.rs  floor_sprite.rs  in_tile_lookup.rs  item.rs  item_sprite.rs  object.rs  object_sprite.rs  position.rs  tile.rs  tile_lookup.rs  walkable.rs  wall.rs  wall_sprite.rs
src/tiles/systems/: add_spatial_for_tiles.rs  remove_floor.rs  remove_wall.rs  spawn_floor.rs  spawn_wall.rs  update_floor_sprites.rs  update_tile_lookup.rs  update_wall_sprites.rs
(+7 files in other folders)
