[package]
name = "cruise_ship_architect"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.19.0"
pathfinding = "4.3.1"
rand = "0.8.5"
futures-lite = "1.13.0"